# obsidian-automation

./: .env.example  .gitignore  GEMINI.md  README.md  cron_log.txt  main.py  pyproject.toml
docs/: implementation_plan.md  progress_log.md
docs/prompts/: apple_notes_processor.md  daily_update.md  inbox_organizer.md
src/: apple_notes_helper.py  daily_manager.py  gemini_helper.py  google_api_services.py  google_auth_helper.py  inbox_organizer.py  notes_processor.py  obsidian_utils.py
tests/: test_apple_notes_helper.py  test_daily_manager.py  test_gemini_helper.py  test_google_api_services.py  test_google_auth_helper.py  test_inbox_organizer.py  test_notes_processor.py
